--- a/greenleaf_app/pubspec.yaml
+++ b/greenleaf_app/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   path_provider: ^2.1.5
   sqflite: ^2.4.2
   image_picker: ^1.1.2
+  collection: ^1.18.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
