--- a/greenleaf_app/pubspec.yaml
+++ b/greenleaf_app/pubspec.yaml
@@ -33,29 +33,30 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
-  flutter_riverpod: ^2.6.1
-  dio: ^5.8.0+1
+  cupertino_icons: ^1.0.2
+  flutter_riverpod: ^2.4.9
+  dio: ^5.4.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  path_provider: ^2.1.5
+  path_provider: ^2.1.2
   sqflite: ^2.4.2
-  image_picker: ^1.1.2
+  image_picker: ^1.0.7
   collection: ^1.18.0
   intl: ^0.19.0
+  connectivity_plus: ^5.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   hive_generator: ^2.0.1
-  build_runner: ^2.4.10
+  build_runner: ^2.4.8
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
